[metadata]
name = ceilometer
version = 2014.2
summary = OpenStack Telemetry
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ceilometer

[entry_points]
ceilometer.notification =
    instance = ceilometer.compute.notifications.instance:Instance
    instance_flavor = ceilometer.compute.notifications.instance:InstanceFlavor
    instance_delete = ceilometer.compute.notifications.instance:InstanceDelete
    instance_scheduled = ceilometer.compute.notifications.instance:InstanceScheduled
    memory = ceilometer.compute.notifications.instance:Memory
    vcpus = ceilometer.compute.notifications.instance:VCpus
    disk_root_size = ceilometer.compute.notifications.instance:RootDiskSize
    disk_ephemeral_size = ceilometer.compute.notifications.instance:EphemeralDiskSize
    cpu_frequency = ceilometer.compute.notifications.cpu:CpuFrequency
    cpu_user_time = ceilometer.compute.notifications.cpu:CpuUserTime
    cpu_kernel_time = ceilometer.compute.notifications.cpu:CpuKernelTime
    cpu_idle_time = ceilometer.compute.notifications.cpu:CpuIdleTime
    cpu_iowait_time = ceilometer.compute.notifications.cpu:CpuIowaitTime
    cpu_kernel_percent = ceilometer.compute.notifications.cpu:CpuKernelPercent
    cpu_idle_percent = ceilometer.compute.notifications.cpu:CpuIdlePercent
    cpu_user_percent = ceilometer.compute.notifications.cpu:CpuUserPercent
    cpu_iowait_percent = ceilometer.compute.notifications.cpu:CpuIowaitPercent
    cpu_percent = ceilometer.compute.notifications.cpu:CpuPercent
    volume = ceilometer.volume.notifications:Volume
    volume_size = ceilometer.volume.notifications:VolumeSize
    snapshot = ceilometer.volume.notifications:Snapshot
    snapshot_size = ceilometer.volume.notifications:SnapshotSize
    authenticate = ceilometer.identity.notifications:Authenticate
    user = ceilometer.identity.notifications:User
    group = ceilometer.identity.notifications:Group
    role = ceilometer.identity.notifications:Role
    project = ceilometer.identity.notifications:Project
    trust = ceilometer.identity.notifications:Trust
    image_crud = ceilometer.image.notifications:ImageCRUD
    image = ceilometer.image.notifications:Image
    image_size = ceilometer.image.notifications:ImageSize
    image_download = ceilometer.image.notifications:ImageDownload
    image_serve = ceilometer.image.notifications:ImageServe
    network = ceilometer.network.notifications:Network
    subnet = ceilometer.network.notifications:Subnet
    port = ceilometer.network.notifications:Port
    router = ceilometer.network.notifications:Router
    floatingip = ceilometer.network.notifications:FloatingIP
    bandwidth = ceilometer.network.notifications:Bandwidth
    http.request = ceilometer.middleware:HTTPRequest
    http.response = ceilometer.middleware:HTTPResponse
    stack_crud = ceilometer.orchestration.notifications:StackCRUD
    data_processing = ceilometer.data_processing.notifications:DataProcessing
    profiler = ceilometer.profiler.notifications:ProfilerNotifications
    hardware.ipmi.temperature = ceilometer.hardware.notifications.ipmi:TemperatureSensorNotification
    hardware.ipmi.voltage = ceilometer.hardware.notifications.ipmi:VoltageSensorNotification
    hardware.ipmi.current = ceilometer.hardware.notifications.ipmi:CurrentSensorNotification
    hardware.ipmi.fan = ceilometer.hardware.notifications.ipmi:FanSensorNotification

ceilometer.discover =
    local_instances = ceilometer.compute.discovery:InstanceDiscovery
    lb_pools = ceilometer.network.services.discovery:LBPoolsDiscovery
    lb_vips = ceilometer.network.services.discovery:LBVipsDiscovery
    lb_members = ceilometer.network.services.discovery:LBMembersDiscovery
    lb_health_probes = ceilometer.network.services.discovery:LBHealthMonitorsDiscovery
    vpn_services    = ceilometer.network.services.discovery:VPNServicesDiscovery
    ipsec_connections  = ceilometer.network.services.discovery:IPSecConnectionsDiscovery
    fw_services = ceilometer.network.services.discovery:FirewallDiscovery
    fw_policy = ceilometer.network.services.discovery:FirewallPolicyDiscovery
    tripleo_overcloud_nodes = ceilometer.hardware.discovery:NodesDiscoveryTripleO

ceilometer.poll.compute =
    disk.read.requests = ceilometer.compute.pollsters.disk:ReadRequestsPollster
    disk.write.requests = ceilometer.compute.pollsters.disk:WriteRequestsPollster
    disk.read.bytes = ceilometer.compute.pollsters.disk:ReadBytesPollster
    disk.write.bytes = ceilometer.compute.pollsters.disk:WriteBytesPollster
    disk.read.requests.rate = ceilometer.compute.pollsters.disk:ReadRequestsRatePollster
    disk.write.requests.rate = ceilometer.compute.pollsters.disk:WriteRequestsRatePollster
    disk.read.bytes.rate = ceilometer.compute.pollsters.disk:ReadBytesRatePollster
    disk.write.bytes.rate = ceilometer.compute.pollsters.disk:WriteBytesRatePollster
    disk.device.read.requests = ceilometer.compute.pollsters.disk:PerDeviceReadRequestsPollster
    disk.device.write.requests = ceilometer.compute.pollsters.disk:PerDeviceWriteRequestsPollster
    disk.device.read.bytes = ceilometer.compute.pollsters.disk:PerDeviceReadBytesPollster
    disk.device.write.bytes = ceilometer.compute.pollsters.disk:PerDeviceWriteBytesPollster
    disk.device.read.requests.rate = ceilometer.compute.pollsters.disk:PerDeviceReadRequestsRatePollster
    disk.device.write.requests.rate = ceilometer.compute.pollsters.disk:PerDeviceWriteRequestsRatePollster
    disk.device.read.bytes.rate = ceilometer.compute.pollsters.disk:PerDeviceReadBytesRatePollster
    disk.device.write.bytes.rate = ceilometer.compute.pollsters.disk:PerDeviceWriteBytesRatePollster
    cpu = ceilometer.compute.pollsters.cpu:CPUPollster
    cpu_util = ceilometer.compute.pollsters.cpu:CPUUtilPollster
    network.incoming.bytes = ceilometer.compute.pollsters.net:IncomingBytesPollster
    network.incoming.packets = ceilometer.compute.pollsters.net:IncomingPacketsPollster
    network.outgoing.bytes = ceilometer.compute.pollsters.net:OutgoingBytesPollster
    network.outgoing.packets = ceilometer.compute.pollsters.net:OutgoingPacketsPollster
    network.incoming.bytes.rate = ceilometer.compute.pollsters.net:IncomingBytesRatePollster
    network.outgoing.bytes.rate = ceilometer.compute.pollsters.net:OutgoingBytesRatePollster
    instance = ceilometer.compute.pollsters.instance:InstancePollster
    instance_flavor = ceilometer.compute.pollsters.instance:InstanceFlavorPollster
    memory.usage = ceilometer.compute.pollsters.memory:MemoryUsagePollster

ceilometer.poll.central =
    ip.floating = ceilometer.network.floatingip:FloatingIPPollster
    image = ceilometer.image.glance:ImagePollster
    image.size = ceilometer.image.glance:ImageSizePollster
    storage.containers.objects = ceilometer.objectstore.swift:ContainersObjectsPollster
    storage.containers.objects.size = ceilometer.objectstore.swift:ContainersSizePollster
    storage.objects = ceilometer.objectstore.swift:ObjectsPollster
    storage.objects.size = ceilometer.objectstore.swift:ObjectsSizePollster
    storage.objects.containers = ceilometer.objectstore.swift:ObjectsContainersPollster
    energy = ceilometer.energy.kwapi:EnergyPollster
    power = ceilometer.energy.kwapi:PowerPollster
    switch.port = ceilometer.network.statistics.port:PortPollster
    switch.port.receive.packets = ceilometer.network.statistics.port:PortPollsterReceivePackets
    switch.port.transmit.packets = ceilometer.network.statistics.port:PortPollsterTransmitPackets
    switch.port.receive.bytes = ceilometer.network.statistics.port:PortPollsterReceiveBytes
    switch.port.transmit.bytes = ceilometer.network.statistics.port:PortPollsterTransmitBytes
    switch.port.receive.drops = ceilometer.network.statistics.port:PortPollsterReceiveDrops
    switch.port.transmit.drops = ceilometer.network.statistics.port:PortPollsterTransmitDrops
    switch.port.receive.errors = ceilometer.network.statistics.port:PortPollsterReceiveErrors
    switch.port.transmit.errors = ceilometer.network.statistics.port:PortPollsterTransmitErrors
    switch.port.receive.frame_error = ceilometer.network.statistics.port:PortPollsterReceiveFrameErrors
    switch.port.receive.overrun_error = ceilometer.network.statistics.port:PortPollsterReceiveOverrunErrors
    switch.port.receive.crc_error = ceilometer.network.statistics.port:PortPollsterReceiveCRCErrors
    switch.port.collision.count = ceilometer.network.statistics.port:PortPollsterCollisionCount
    switch.table = ceilometer.network.statistics.table:TablePollster
    switch.table.active.entries = ceilometer.network.statistics.table:TablePollsterActiveEntries
    switch.table.lookup.packets = ceilometer.network.statistics.table:TablePollsterLookupPackets
    switch.table.matched.packets = ceilometer.network.statistics.table:TablePollsterMatchedPackets
    switch = ceilometer.network.statistics.switch:SWPollster
    switch.flow = ceilometer.network.statistics.flow:FlowPollster
    switch.flow.bytes = ceilometer.network.statistics.flow:FlowPollsterBytes
    switch.flow.duration.nanoseconds = ceilometer.network.statistics.flow:FlowPollsterDurationNanoseconds
    switch.flow.duration.seconds = ceilometer.network.statistics.flow:FlowPollsterDurationSeconds
    switch.flow.packets = ceilometer.network.statistics.flow:FlowPollsterPackets
    hardware.cpu.load.1min = ceilometer.hardware.pollsters.cpu:CPULoad1MinPollster
    hardware.cpu.load.5min = ceilometer.hardware.pollsters.cpu:CPULoad5MinPollster
    hardware.cpu.load.15min = ceilometer.hardware.pollsters.cpu:CPULoad15MinPollster
    hardware.disk.size.total = ceilometer.hardware.pollsters.disk:DiskTotalPollster
    hardware.disk.size.used = ceilometer.hardware.pollsters.disk:DiskUsedPollster
    hardware.network.incoming.bytes = ceilometer.hardware.pollsters.net:IncomingBytesPollster
    hardware.network.outgoing.bytes = ceilometer.hardware.pollsters.net:OutgoingBytesPollster
    hardware.network.outgoing.errors = ceilometer.hardware.pollsters.net:OutgoingErrorsPollster
    hardware.memory.total = ceilometer.hardware.pollsters.memory:MemoryTotalPollster
    hardware.memory.used = ceilometer.hardware.pollsters.memory:MemoryUsedPollster
    network.services.lb.pool = ceilometer.network.services.lbaas:LBPoolPollster
    network.services.lb.vip = ceilometer.network.services.lbaas:LBVipPollster
    network.services.lb.member = ceilometer.network.services.lbaas:LBMemberPollster
    network.services.lb.health_monitor = ceilometer.network.services.lbaas:LBHealthMonitorPollster
    network.services.lb.total.connections = ceilometer.network.services.lbaas:LBTotalConnectionsPollster
    network.services.lb.active.connections = ceilometer.network.services.lbaas:LBActiveConnectionsPollster
    network.services.lb.incoming.bytes = ceilometer.network.services.lbaas:LBBytesInPollster
    network.services.lb.outgoing.bytes = ceilometer.network.services.lbaas:LBBytesOutPollster
    network.services.vpn = ceilometer.network.services.vpnaas:VPNServicesPollster
    network.services.vpn.connections = ceilometer.network.services.vpnaas:IPSecConnectionsPollster
    network.services.firewall = ceilometer.network.services.fwaas:FirewallPollster
    network.services.firewall.policy = ceilometer.network.services.fwaas:FirewallPolicyPollster


ceilometer.alarm.storage =
    log = ceilometer.alarm.storage.impl_log:Connection
    mongodb = ceilometer.alarm.storage.impl_mongodb:Connection
    mysql = ceilometer.alarm.storage.impl_sqlalchemy:Connection
    postgresql = ceilometer.alarm.storage.impl_sqlalchemy:Connection
    sqlite = ceilometer.alarm.storage.impl_sqlalchemy:Connection
    hbase = ceilometer.alarm.storage.impl_hbase:Connection
    db2 = ceilometer.alarm.storage.impl_db2:Connection

ceilometer.metering.storage =
    log = ceilometer.storage.impl_log:Connection
    mongodb = ceilometer.storage.impl_mongodb:Connection
    mysql = ceilometer.storage.impl_sqlalchemy:Connection
    postgresql = ceilometer.storage.impl_sqlalchemy:Connection
    sqlite = ceilometer.storage.impl_sqlalchemy:Connection
    hbase = ceilometer.storage.impl_hbase:Connection
    db2 = ceilometer.storage.impl_db2:Connection

ceilometer.compute.virt =
    libvirt = ceilometer.compute.virt.libvirt.inspector:LibvirtInspector
    hyperv = ceilometer.compute.virt.hyperv.inspector:HyperVInspector
    vsphere = ceilometer.compute.virt.vmware.inspector:VsphereInspector
    xenapi = ceilometer.compute.virt.xenapi.inspector:XenapiInspector

ceilometer.hardware.inspectors =
    snmp = ceilometer.hardware.inspector.snmp:SNMPInspector

ceilometer.transformer =
    accumulator = ceilometer.transformer.accumulator:TransformerAccumulator
    unit_conversion = ceilometer.transformer.conversions:ScalingTransformer
    rate_of_change = ceilometer.transformer.conversions:RateOfChangeTransformer
    aggregator = ceilometer.transformer.conversions:AggregatorTransformer
    arithmetic = ceilometer.transformer.arithmetic:ArithmeticTransformer

ceilometer.publisher =
    test = ceilometer.publisher.test:TestPublisher
    meter_publisher = ceilometer.publisher.messaging:RPCPublisher
    meter = ceilometer.publisher.messaging:RPCPublisher
    rpc = ceilometer.publisher.messaging:RPCPublisher
    notifier = ceilometer.publisher.messaging:NotifierPublisher
    udp = ceilometer.publisher.udp:UDPPublisher
    file = ceilometer.publisher.file:FilePublisher

ceilometer.alarm.evaluator =
    threshold = ceilometer.alarm.evaluator.threshold:ThresholdEvaluator
    combination = ceilometer.alarm.evaluator.combination:CombinationEvaluator

ceilometer.alarm.evaluator_service =
    default = ceilometer.alarm.service:AlarmEvaluationService
    singleton = ceilometer.alarm.service:SingletonAlarmService
    partitioned = ceilometer.alarm.service:PartitionedAlarmService
    # NOTE(sileht): for backward compatibility
    ceilometer.alarm.service.SingletonAlarmService = ceilometer.alarm.service:SingletonAlarmService
    ceilometer.alarm.service.PartitionedAlarmService = ceilometer.alarm.service:PartitionedAlarmService

ceilometer.alarm.notifier =
    log = ceilometer.alarm.notifier.log:LogAlarmNotifier
    test = ceilometer.alarm.notifier.test:TestAlarmNotifier
    http = ceilometer.alarm.notifier.rest:RestAlarmNotifier
    https = ceilometer.alarm.notifier.rest:RestAlarmNotifier
    trust+http = ceilometer.alarm.notifier.trust:TrustRestAlarmNotifier
    trust+https = ceilometer.alarm.notifier.trust:TrustRestAlarmNotifier

ceilometer.event.trait_plugin =
    split = ceilometer.event.trait_plugins:SplitterTraitPlugin
    bitfield = ceilometer.event.trait_plugins:BitfieldTraitPlugin

paste.filter_factory =
    swift = ceilometer.objectstore.swift_middleware:filter_factory

console_scripts =
    ceilometer-api = ceilometer.cmd.api:main
    ceilometer-agent-central = ceilometer.cmd.agent_central:main
    ceilometer-agent-compute = ceilometer.cmd.agent_compute:main
    ceilometer-agent-notification = ceilometer.cmd.agent_notification:main
    ceilometer-send-sample = ceilometer.cli:send_sample
    ceilometer-dbsync = ceilometer.cmd.storage:dbsync
    ceilometer-expirer = ceilometer.cmd.storage:expirer
    ceilometer-collector = ceilometer.cmd.collector:main
    ceilometer-alarm-evaluator = ceilometer.cmd.alarm:evaluator
    ceilometer-alarm-notifier = ceilometer.cmd.alarm:notifier

ceilometer.dispatcher =
    database = ceilometer.dispatcher.database:DatabaseDispatcher
    file = ceilometer.dispatcher.file:FileDispatcher

network.statistics.drivers =
    opendaylight = ceilometer.network.statistics.opendaylight.driver:OpenDayLightDriver
    opencontrail = ceilometer.network.statistics.opencontrail.driver:OpencontrailDriver

# These are for backwards compat with Havana notification_driver configuration values
oslo.messaging.notify.drivers =
    ceilometer.openstack.common.notifier.log_notifier = oslo.messaging.notify._impl_log:LogDriver
    ceilometer.openstack.common.notifier.no_op_notifier = oslo.messaging.notify._impl_noop:NoOpDriver
    ceilometer.openstack.common.notifier.rpc_notifier2 = oslo.messaging.notify._impl_messaging:MessagingV2Driver
    ceilometer.openstack.common.notifier.rpc_notifier = oslo.messaging.notify._impl_messaging:MessagingDriver
    ceilometer.openstack.common.notifier.test_notifier = oslo.messaging.notify._impl_test:TestDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = true

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometer/locale/ceilometer.pot

[compile_catalog]
directory = ceilometer/locale
domain = ceilometer

[update_catalog]
domain = ceilometer
output_dir = ceilometer/locale
input_file = ceilometer/locale/ceilometer.pot
