[metadata]
name = ceilometer
summary = OpenStack Telemetry
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/ceilometer/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ceilometer

[entry_points]
ceilometer.notification =
    instance = ceilometer.compute.notifications.instance:Instance
    instance_scheduled = ceilometer.compute.notifications.instance:InstanceScheduled
    network = ceilometer.network.notifications:Network
    subnet = ceilometer.network.notifications:Subnet
    port = ceilometer.network.notifications:Port
    router = ceilometer.network.notifications:Router
    floatingip = ceilometer.network.notifications:FloatingIP
    http.request = ceilometer.middleware:HTTPRequest
    http.response = ceilometer.middleware:HTTPResponse
    hardware.ipmi.temperature = ceilometer.ipmi.notifications.ironic:TemperatureSensorNotification
    hardware.ipmi.voltage = ceilometer.ipmi.notifications.ironic:VoltageSensorNotification
    hardware.ipmi.current = ceilometer.ipmi.notifications.ironic:CurrentSensorNotification
    hardware.ipmi.fan = ceilometer.ipmi.notifications.ironic:FanSensorNotification
    network.services.lb.pool = ceilometer.network.notifications:Pool
    network.services.lb.vip = ceilometer.network.notifications:Vip
    network.services.lb.member = ceilometer.network.notifications:Member
    network.services.lb.health_monitor = ceilometer.network.notifications:HealthMonitor
    network.services.firewall = ceilometer.network.notifications:Firewall
    network.services.firewall.policy = ceilometer.network.notifications:FirewallPolicy
    network.services.firewall.rule = ceilometer.network.notifications:FirewallRule
    network.services.vpn = ceilometer.network.notifications:VPNService
    network.services.vpn.ipsecpolicy = ceilometer.network.notifications:IPSecPolicy
    network.services.vpn.ikepolicy = ceilometer.network.notifications:IKEPolicy
    network.services.vpn.connections = ceilometer.network.notifications:IPSecSiteConnection
    _sample = ceilometer.telemetry.notifications:TelemetryIpc
    meter = ceilometer.meter.notifications:ProcessMeterNotifications

ceilometer.discover =
    local_instances = ceilometer.compute.discovery:InstanceDiscovery
    endpoint = ceilometer.agent.discovery.endpoint:EndpointDiscovery
    tenant = ceilometer.agent.discovery.tenant:TenantDiscovery
    local_node = ceilometer.agent.discovery.localnode:LocalNodeDiscovery
    lb_pools = ceilometer.network.services.discovery:LBPoolsDiscovery
    lb_vips = ceilometer.network.services.discovery:LBVipsDiscovery
    lb_members = ceilometer.network.services.discovery:LBMembersDiscovery
    lb_listeners = ceilometer.network.services.discovery:LBListenersDiscovery
    lb_loadbalancers = ceilometer.network.services.discovery:LBLoadBalancersDiscovery
    lb_health_probes = ceilometer.network.services.discovery:LBHealthMonitorsDiscovery
    vpn_services    = ceilometer.network.services.discovery:VPNServicesDiscovery
    ipsec_connections  = ceilometer.network.services.discovery:IPSecConnectionsDiscovery
    fw_services = ceilometer.network.services.discovery:FirewallDiscovery
    fw_policy = ceilometer.network.services.discovery:FirewallPolicyDiscovery
    tripleo_overcloud_nodes = ceilometer.hardware.discovery:NodesDiscoveryTripleO

ceilometer.poll.compute =
    disk.read.requests = ceilometer.compute.pollsters.disk:ReadRequestsPollster
    disk.write.requests = ceilometer.compute.pollsters.disk:WriteRequestsPollster
    disk.read.bytes = ceilometer.compute.pollsters.disk:ReadBytesPollster
    disk.write.bytes = ceilometer.compute.pollsters.disk:WriteBytesPollster
    disk.read.requests.rate = ceilometer.compute.pollsters.disk:ReadRequestsRatePollster
    disk.write.requests.rate = ceilometer.compute.pollsters.disk:WriteRequestsRatePollster
    disk.read.bytes.rate = ceilometer.compute.pollsters.disk:ReadBytesRatePollster
    disk.write.bytes.rate = ceilometer.compute.pollsters.disk:WriteBytesRatePollster
    disk.device.read.requests = ceilometer.compute.pollsters.disk:PerDeviceReadRequestsPollster
    disk.device.write.requests = ceilometer.compute.pollsters.disk:PerDeviceWriteRequestsPollster
    disk.device.read.bytes = ceilometer.compute.pollsters.disk:PerDeviceReadBytesPollster
    disk.device.write.bytes = ceilometer.compute.pollsters.disk:PerDeviceWriteBytesPollster
    disk.device.read.requests.rate = ceilometer.compute.pollsters.disk:PerDeviceReadRequestsRatePollster
    disk.device.write.requests.rate = ceilometer.compute.pollsters.disk:PerDeviceWriteRequestsRatePollster
    disk.device.read.bytes.rate = ceilometer.compute.pollsters.disk:PerDeviceReadBytesRatePollster
    disk.device.write.bytes.rate = ceilometer.compute.pollsters.disk:PerDeviceWriteBytesRatePollster
    disk.latency = ceilometer.compute.pollsters.disk:DiskLatencyPollster
    disk.device.latency = ceilometer.compute.pollsters.disk:PerDeviceDiskLatencyPollster
    disk.iops = ceilometer.compute.pollsters.disk:DiskIOPSPollster
    disk.device.iops = ceilometer.compute.pollsters.disk:PerDeviceDiskIOPSPollster
    cpu = ceilometer.compute.pollsters.cpu:CPUPollster
    cpu_util = ceilometer.compute.pollsters.cpu:CPUUtilPollster
    network.incoming.bytes = ceilometer.compute.pollsters.net:IncomingBytesPollster
    network.incoming.packets = ceilometer.compute.pollsters.net:IncomingPacketsPollster
    network.outgoing.bytes = ceilometer.compute.pollsters.net:OutgoingBytesPollster
    network.outgoing.packets = ceilometer.compute.pollsters.net:OutgoingPacketsPollster
    network.incoming.bytes.rate = ceilometer.compute.pollsters.net:IncomingBytesRatePollster
    network.outgoing.bytes.rate = ceilometer.compute.pollsters.net:OutgoingBytesRatePollster
    instance = ceilometer.compute.pollsters.instance:InstancePollster
    memory.usage = ceilometer.compute.pollsters.memory:MemoryUsagePollster
    memory.resident = ceilometer.compute.pollsters.memory:MemoryResidentPollster
    disk.capacity = ceilometer.compute.pollsters.disk:CapacityPollster
    disk.allocation = ceilometer.compute.pollsters.disk:AllocationPollster
    disk.usage = ceilometer.compute.pollsters.disk:PhysicalPollster
    disk.device.capacity = ceilometer.compute.pollsters.disk:PerDeviceCapacityPollster
    disk.device.allocation = ceilometer.compute.pollsters.disk:PerDeviceAllocationPollster
    disk.device.usage = ceilometer.compute.pollsters.disk:PerDevicePhysicalPollster

ceilometer.poll.ipmi =
    hardware.ipmi.node.power = ceilometer.ipmi.pollsters.node:PowerPollster
    hardware.ipmi.node.temperature = ceilometer.ipmi.pollsters.node:InletTemperaturePollster
    hardware.ipmi.node.outlet_temperature = ceilometer.ipmi.pollsters.node:OutletTemperaturePollster
    hardware.ipmi.node.airflow = ceilometer.ipmi.pollsters.node:AirflowPollster
    hardware.ipmi.node.cups = ceilometer.ipmi.pollsters.node:CUPSIndexPollster
    hardware.ipmi.node.cpu_util = ceilometer.ipmi.pollsters.node:CPUUtilPollster
    hardware.ipmi.node.mem_util = ceilometer.ipmi.pollsters.node:MemUtilPollster
    hardware.ipmi.node.io_util = ceilometer.ipmi.pollsters.node:IOUtilPollster
    hardware.ipmi.temperature = ceilometer.ipmi.pollsters.sensor:TemperatureSensorPollster
    hardware.ipmi.voltage = ceilometer.ipmi.pollsters.sensor:VoltageSensorPollster
    hardware.ipmi.current = ceilometer.ipmi.pollsters.sensor:CurrentSensorPollster
    hardware.ipmi.fan = ceilometer.ipmi.pollsters.sensor:FanSensorPollster

ceilometer.poll.central =
    ip.floating = ceilometer.network.floatingip:FloatingIPPollster
    image = ceilometer.image.glance:ImagePollster
    image.size = ceilometer.image.glance:ImageSizePollster
    rgw.containers.objects = ceilometer.objectstore.rgw:ContainersObjectsPollster
    rgw.containers.objects.size = ceilometer.objectstore.rgw:ContainersSizePollster
    rgw.objects = ceilometer.objectstore.rgw:ObjectsPollster
    rgw.objects.size = ceilometer.objectstore.rgw:ObjectsSizePollster
    rgw.objects.containers = ceilometer.objectstore.rgw:ObjectsContainersPollster
    rgw.usage = ceilometer.objectstore.rgw:UsagePollster
    storage.containers.objects = ceilometer.objectstore.swift:ContainersObjectsPollster
    storage.containers.objects.size = ceilometer.objectstore.swift:ContainersSizePollster
    storage.objects = ceilometer.objectstore.swift:ObjectsPollster
    storage.objects.size = ceilometer.objectstore.swift:ObjectsSizePollster
    storage.objects.containers = ceilometer.objectstore.swift:ObjectsContainersPollster
    energy = ceilometer.energy.kwapi:EnergyPollster
    power = ceilometer.energy.kwapi:PowerPollster
    switch.port = ceilometer.network.statistics.port:PortPollster
    switch.port.receive.packets = ceilometer.network.statistics.port:PortPollsterReceivePackets
    switch.port.transmit.packets = ceilometer.network.statistics.port:PortPollsterTransmitPackets
    switch.port.receive.bytes = ceilometer.network.statistics.port:PortPollsterReceiveBytes
    switch.port.transmit.bytes = ceilometer.network.statistics.port:PortPollsterTransmitBytes
    switch.port.receive.drops = ceilometer.network.statistics.port:PortPollsterReceiveDrops
    switch.port.transmit.drops = ceilometer.network.statistics.port:PortPollsterTransmitDrops
    switch.port.receive.errors = ceilometer.network.statistics.port:PortPollsterReceiveErrors
    switch.port.transmit.errors = ceilometer.network.statistics.port:PortPollsterTransmitErrors
    switch.port.receive.frame_error = ceilometer.network.statistics.port:PortPollsterReceiveFrameErrors
    switch.port.receive.overrun_error = ceilometer.network.statistics.port:PortPollsterReceiveOverrunErrors
    switch.port.receive.crc_error = ceilometer.network.statistics.port:PortPollsterReceiveCRCErrors
    switch.port.collision.count = ceilometer.network.statistics.port:PortPollsterCollisionCount
    switch.table = ceilometer.network.statistics.table:TablePollster
    switch.table.active.entries = ceilometer.network.statistics.table:TablePollsterActiveEntries
    switch.table.lookup.packets = ceilometer.network.statistics.table:TablePollsterLookupPackets
    switch.table.matched.packets = ceilometer.network.statistics.table:TablePollsterMatchedPackets
    switch = ceilometer.network.statistics.switch:SWPollster
    switch.flow = ceilometer.network.statistics.flow:FlowPollster
    switch.flow.bytes = ceilometer.network.statistics.flow:FlowPollsterBytes
    switch.flow.duration.nanoseconds = ceilometer.network.statistics.flow:FlowPollsterDurationNanoseconds
    switch.flow.duration.seconds = ceilometer.network.statistics.flow:FlowPollsterDurationSeconds
    switch.flow.packets = ceilometer.network.statistics.flow:FlowPollsterPackets
    network.services.lb.pool = ceilometer.network.services.lbaas:LBPoolPollster
    network.services.lb.vip = ceilometer.network.services.lbaas:LBVipPollster
    network.services.lb.member = ceilometer.network.services.lbaas:LBMemberPollster
    network.services.lb.listener = ceilometer.network.services.lbaas:LBListenerPollster
    network.services.lb.loadbalancer = ceilometer.network.services.lbaas:LBLoadBalancerPollster
    network.services.lb.health_monitor = ceilometer.network.services.lbaas:LBHealthMonitorPollster
    network.services.lb.total.connections = ceilometer.network.services.lbaas:LBTotalConnectionsPollster
    network.services.lb.active.connections = ceilometer.network.services.lbaas:LBActiveConnectionsPollster
    network.services.lb.incoming.bytes = ceilometer.network.services.lbaas:LBBytesInPollster
    network.services.lb.outgoing.bytes = ceilometer.network.services.lbaas:LBBytesOutPollster
    network.services.vpn = ceilometer.network.services.vpnaas:VPNServicesPollster
    network.services.vpn.connections = ceilometer.network.services.vpnaas:IPSecConnectionsPollster
    network.services.firewall = ceilometer.network.services.fwaas:FirewallPollster
    network.services.firewall.policy = ceilometer.network.services.fwaas:FirewallPolicyPollster

ceilometer.builder.poll.central =
    hardware.snmp = ceilometer.hardware.pollsters.generic:GenericHardwareDeclarativePollster

ceilometer.event.storage =
    es = ceilometer.event.storage.impl_elasticsearch:Connection
    log = ceilometer.event.storage.impl_log:Connection
    mongodb = ceilometer.event.storage.impl_mongodb:Connection
    mysql = ceilometer.event.storage.impl_sqlalchemy:Connection
    postgresql = ceilometer.event.storage.impl_sqlalchemy:Connection
    sqlite = ceilometer.event.storage.impl_sqlalchemy:Connection
    hbase = ceilometer.event.storage.impl_hbase:Connection
    db2 = ceilometer.event.storage.impl_db2:Connection

ceilometer.metering.storage =
    log = ceilometer.storage.impl_log:Connection
    mongodb = ceilometer.storage.impl_mongodb:Connection
    mysql = ceilometer.storage.impl_sqlalchemy:Connection
    postgresql = ceilometer.storage.impl_sqlalchemy:Connection
    sqlite = ceilometer.storage.impl_sqlalchemy:Connection
    hbase = ceilometer.storage.impl_hbase:Connection
    db2 = ceilometer.storage.impl_db2:Connection

ceilometer.compute.virt =
    libvirt = ceilometer.compute.virt.libvirt.inspector:LibvirtInspector
    hyperv = ceilometer.compute.virt.hyperv.inspector:HyperVInspector
    vsphere = ceilometer.compute.virt.vmware.inspector:VsphereInspector
    xenapi = ceilometer.compute.virt.xenapi.inspector:XenapiInspector

ceilometer.hardware.inspectors =
    snmp = ceilometer.hardware.inspector.snmp:SNMPInspector

ceilometer.transformer =
    accumulator = ceilometer.transformer.accumulator:TransformerAccumulator
    delta = ceilometer.transformer.conversions:DeltaTransformer
    unit_conversion = ceilometer.transformer.conversions:ScalingTransformer
    rate_of_change = ceilometer.transformer.conversions:RateOfChangeTransformer
    aggregator = ceilometer.transformer.conversions:AggregatorTransformer
    arithmetic = ceilometer.transformer.arithmetic:ArithmeticTransformer

ceilometer.publisher =
    test = ceilometer.publisher.test:TestPublisher
    notifier = ceilometer.publisher.messaging:SampleNotifierPublisher
    udp = ceilometer.publisher.udp:UDPPublisher
    file = ceilometer.publisher.file:FilePublisher
    direct = ceilometer.publisher.direct:DirectPublisher
    kafka = ceilometer.publisher.kafka_broker:KafkaBrokerPublisher
    http = ceilometer.publisher.http:HttpPublisher

ceilometer.event.publisher =
    test = ceilometer.publisher.test:TestPublisher
    direct = ceilometer.publisher.direct:DirectPublisher
    notifier = ceilometer.publisher.messaging:EventNotifierPublisher
    kafka = ceilometer.publisher.kafka_broker:KafkaBrokerPublisher
    http = ceilometer.publisher.http:HttpPublisher

ceilometer.event.trait_plugin =
    split = ceilometer.event.trait_plugins:SplitterTraitPlugin
    bitfield = ceilometer.event.trait_plugins:BitfieldTraitPlugin
    timedelta = ceilometer.event.trait_plugins:TimedeltaPlugin


console_scripts =
    ceilometer-api = ceilometer.cmd.api:main
    ceilometer-polling = ceilometer.cmd.polling:main
    ceilometer-agent-notification = ceilometer.cmd.agent_notification:main
    ceilometer-send-sample = ceilometer.cmd.sample:send_sample
    ceilometer-dbsync = ceilometer.cmd.storage:dbsync
    ceilometer-expirer = ceilometer.cmd.storage:expirer
    ceilometer-rootwrap = oslo_rootwrap.cmd:main
    ceilometer-collector = ceilometer.cmd.collector:main

ceilometer.dispatcher.meter =
    database = ceilometer.dispatcher.database:DatabaseDispatcher
    file = ceilometer.dispatcher.file:FileDispatcher
    http = ceilometer.dispatcher.http:HttpDispatcher
    gnocchi = ceilometer.dispatcher.gnocchi:GnocchiDispatcher

ceilometer.dispatcher.event =
    database = ceilometer.dispatcher.database:DatabaseDispatcher
    file = ceilometer.dispatcher.file:FileDispatcher
    http = ceilometer.dispatcher.http:HttpDispatcher

network.statistics.drivers =
    opendaylight = ceilometer.network.statistics.opendaylight.driver:OpenDayLightDriver
    opencontrail = ceilometer.network.statistics.opencontrail.driver:OpencontrailDriver

oslo.config.opts =
    ceilometer = ceilometer.opts:list_opts

oslo.config.opts.defaults =
    ceilometer = ceilometer.conf.defaults:set_cors_middleware_defaults

keystoneauth1.plugin =
    password-ceilometer-legacy = ceilometer.keystone_client:LegacyCeilometerKeystoneLoader

tempest.test_plugins =
    ceilometer_tests = ceilometer.tests.tempest.plugin:CeilometerTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = true
autodoc_index_modules = true

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometer/locale/ceilometer.pot

[compile_catalog]
directory = ceilometer/locale
domain = ceilometer

[update_catalog]
domain = ceilometer
output_dir = ceilometer/locale
input_file = ceilometer/locale/ceilometer.pot
